# MyCraft-Server

./: .gitignore  CMakeLists.txt  README.md
include/: craftlib.h
include/internals/: types.h
include/internals/debug/: logger.h
include/internals/server/: data.h  packets.h  play.h  sockets.h
src/: main.c
src/internals/debug/: logger.c
src/internals/server/: data.c  packets.c  play.c  sockets.c
